# shannon-prime-engine

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DESKTOP-ENGINE.md  ENGINE_GUIDE.md  HANDOFF.md  LICENSE  LICENSE.third_party  PHASE_5_HANDOFF.md  PHONE-ENGINE.md  README.md  ROADMAP.md  SESSION_STATE.md  SYSTEM_SUMMARY.md
bench/: Qwen3-0.6B-Q4_K_M.gguf  run_cache_ppl.bat  test_corpus.txt
docs/: DESKTOP-ENGINE.md  STEP3-GPU-SQFREE-CACHE.md  Shannon-Prime.md
frontend/: app.js  index.html  style.css
notebooks/: shannon_prime_calibration.ipynb
patches/: README.md
scripts/: device_dma_init.sh  qnn_bin_probe.py  runpod_benchmark.sh  runpod_parse_results.py
src/: engine.cpp  engine.h  forward.cpp  forward.h  forward_native.cpp  forward_native.h  forward_native_context.cpp  forward_native_context.h  gdn_state.cpp  gdn_state.h  gguf_loader.cpp  gguf_loader.h  http_server.cpp  http_server.h  kv_cache.cpp  kv_cache.h  llama_weights.cpp  llama_weights.h  model_loader.cpp  prime_pe.cpp  prime_pe.h  qnn_bin_driver.cpp  qnn_bin_driver.h  qnn_bin_quant_table.h  sp_kernels_cpu.cpp  sp_kernels_cpu.h  sp_quant.cpp  sp_quant.h  sp_tensor.cpp  sp_tensor.h  sp_threadpool.cpp  sp_threadpool.h  speculative_oracle.cpp  speculative_oracle.h  tokenizer.cpp  tokenizer.h  vocab.cpp  vocab.h
src/cli/: main.cpp
tests/: CMakeLists.txt  bench_disk_partial.cpp  test_disk_cache_roundtrip.cpp  test_engine_smoke.cpp  test_gguf_loader.cpp  test_sp_kernels.cpp  test_sp_quant_q5k.cpp
tests/tools/: README.md  qwen3next_ab.py
